Fix search spacing.

--- a/jujugui/static/gui/src/app/components/panel/_panel.scss
+++ b/jujugui/static/gui/src/app/components/panel/_panel.scss
@@ -18,10 +18,10 @@
     position: absolute;
     z-index: 1000;
     top: $navbar-height;
-    bottom: $deployer-bar-height;
+    bottom: 0;
     left: 0;
     right: 0;
-    padding: 0 0 0 $panel-space;
+    padding: 0 0 $panel-space $panel-space;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: inherit;
     box-shadow: none;
